[package]
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]
build = "build.rs"
edition = "2018"
links = "VkLayer_core_validation"
name = "a_quest_for_triangle"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ash = "0.31.0"
byte-slice-cast = "1.0"
env_logger = "0.7"
futures = "0.3"
jni = "0.17"
log = "0.4"
#ovr-mobile-sys = {git = "https://github.com/kanerogers/ovr-mobile-sys"}
ovr-mobile-sys = {path = "../ovr-mobile-sys"}

[package.metadata.android]
apk_label = "A Quest for a Triangle"
fullscreen = true
target_sdk_version = 26

[[package.metadata.android.permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

# [[package.metadata.android.activity_metadatas]]
# name = "com.oculus.vr.focusaware"
# value = "true"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.17"
ndk = "0.2.1"
ndk-glue = {git = "https://github.com/MarijnS95/android-ndk-rs", branch = "poll-use-identifier"}
