[package]
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]
edition = "2018"
name = "a_quest_for_triangle"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ash = "0.31.0"
byte-slice-cast = "1.0"
env_logger = "0.7"
futures = "0.3"
jni = "0.17"
log = "0.4"
#ovr-mobile-sys = {git = "https://github.com/kanerogers/ovr-mobile-sys"}
bitflags = "1.2"
ovr-mobile-sys = {path = "../ovr-mobile-sys"}

[package.metadata.android]
apk_label = "A Quest for a Triangle"
fullscreen = true
libs = ["src/libs/libVkLayer_khronos_validation.so"]
target_sdk_version = 28

[[package.metadata.android.feature]]
name = "oculus.software.handtracking"
required = true

[[package.metadata.android.permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.permission]]
name = "oculus.permission.HAND_TRACKING"

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "false"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.17"
ndk = "0.3.0"
ndk-glue = "0.3.0"
